chore: Upgrade s3proxy to 2.5.0